Include aufs2, marked as staging (Closes: #541828)
What could possibly go wrong?


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14379 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3605,6 +3605,18 @@ CONFIG_SND_USB_CAIAQ_INPUT=y
 CONFIG_SND_USB_US122L=m
 
 ##
+## file: ubuntu/aufs/Kconfig
+##
+CONFIG_AUFS_FS=m
+CONFIG_AUFS_BRANCH_MAX_127=y
+# CONFIG_AUFS_HINOTIFY is not set
+# CONFIG_AUFS_EXPORT is not set
+# CONFIG_AUFS_SHWH is not set
+# CONFIG_AUFS_BR_RAMFS is not set
+# CONFIG_AUFS_BR_FUSE is not set
+# CONFIG_AUFS_DEBUG is not set
+
+##
 ## file: usr/Kconfig
 ##
 CONFIG_INITRAMFS_SOURCE=""
