Enable speakup modules for all architectures except s390
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14391 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/s390/config
+++ b/linux-2.6/debian/config/s390/config
@@ -132,6 +132,25 @@ CONFIG_QETH_L3=m
 CONFIG_ZFCP=m
 
 ##
+## file: drivers/staging/speakup/Kconfig
+##
+# CONFIG_SPEAKUP_SYNTH_ACNTSA is not set
+# CONFIG_SPEAKUP_SYNTH_ACNTPC is not set
+# CONFIG_SPEAKUP_SYNTH_APOLLO is not set
+# CONFIG_SPEAKUP_SYNTH_AUDPTR is not set
+# CONFIG_SPEAKUP_SYNTH_BNS is not set
+# CONFIG_SPEAKUP_SYNTH_DECTLK is not set
+# CONFIG_SPEAKUP_SYNTH_DECEXT is not set
+# CONFIG_SPEAKUP_SYNTH_DTLK is not set
+# CONFIG_SPEAKUP_SYNTH_KEYPC is not set
+# CONFIG_SPEAKUP_SYNTH_LTLK is not set
+# CONFIG_SPEAKUP_SYNTH_SOFT is not set
+# CONFIG_SPEAKUP_SYNTH_SPKOUT is not set
+# CONFIG_SPEAKUP_SYNTH_TXPRT is not set
+# CONFIG_SPEAKUP_SYNTH_DUMMY is not set
+# CONFIG_SPEAKUP is not set
+
+##
 ## file: drivers/watchdog/Kconfig
 ##
 # CONFIG_WATCHDOG is not set
