--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1987,8 +1987,226 @@ CONFIG_SSB=m
 ##
 ## file: drivers/staging/Kconfig
 ##
-# CONFIG_STAGING is not set
+CONFIG_STAGING=y
 # CONFIG_STAGING_EXCLUDE_BUILD is not set
+
+##
+## file: drivers/staging/agnx/Kconfig
+##
+# CONFIG_AGNX is not set
+
+##
+## file: drivers/staging/altpciechdma/Kconfig
+##
+# CONFIG_ALTERA_PCIE_CHDMA is not set
+
+##
+## file: drivers/staging/android/Kconfig
+##
+# CONFIG_ANDROID is not set
+# CONFIG_ANDROID_BINDER_IPC is not set
+# CONFIG_ANDROID_LOGGER is not set
+# CONFIG_ANDROID_RAM_CONSOLE is not set
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+
+##
+## file: drivers/staging/asus_oled/Kconfig
+##
+# CONFIG_ASUS_OLED is not set
+
+##
+## file: drivers/staging/at76_usb/Kconfig
+##
+# CONFIG_USB_ATMEL is not set
+
+##
+## file: drivers/staging/b3dfg/Kconfig
+##
+# CONFIG_B3DFG is not set
+
+##
+## file: drivers/staging/comedi/Kconfig
+##
+# CONFIG_COMEDI is not set
+
+##
+## file: drivers/staging/cpc-usb/Kconfig
+##
+# CONFIG_USB_CPC is not set
+
+##
+## file: drivers/staging/dst/Kconfig
+##
+# CONFIG_DST is not set
+
+##
+## file: drivers/staging/echo/Kconfig
+##
+# CONFIG_ECHO is not set
+
+##
+## file: drivers/staging/epl/Kconfig
+##
+# CONFIG_EPL is not set
+
+##
+## file: drivers/staging/et131x/Kconfig
+##
+# CONFIG_ET131X is not set
+
+##
+## file: drivers/staging/frontier/Kconfig
+##
+# CONFIG_TRANZPORT is not set
+
+##
+## file: drivers/staging/go7007/Kconfig
+##
+# CONFIG_VIDEO_GO7007 is not set
+
+##
+## file: drivers/staging/heci/Kconfig
+##
+# CONFIG_HECI is not set
+
+##
+## file: drivers/staging/line6/Kconfig
+##
+# CONFIG_LINE6_USB is not set
+
+##
+## file: drivers/staging/me4000/Kconfig
+##
+# CONFIG_ME4000 is not set
+
+##
+## file: drivers/staging/meilhaus/Kconfig
+##
+# CONFIG_MEILHAUS is not set
+
+##
+## file: drivers/staging/mimio/Kconfig
+##
+# CONFIG_INPUT_MIMIO is not set
+
+##
+## file: drivers/staging/otus/Kconfig
+##
+# CONFIG_OTUS is not set
+
+##
+## file: drivers/staging/p9auth/Kconfig
+##
+# CONFIG_PLAN9AUTH is not set
+
+##
+## file: drivers/staging/panel/Kconfig
+##
+# CONFIG_PANEL is not set
+
+##
+## file: drivers/staging/pata_rdc/Kconfig
+##
+# CONFIG_RDC_17F3101X is not set
+
+##
+## file: drivers/staging/phison/Kconfig
+##
+# CONFIG_IDE_PHISON is not set
+
+##
+## file: drivers/staging/poch/Kconfig
+##
+# CONFIG_POCH is not set
+
+##
+## file: drivers/staging/pohmelfs/Kconfig
+##
+# CONFIG_POHMELFS is not set
+
+##
+## file: drivers/staging/rt2860/Kconfig
+##
+# CONFIG_RT2860 is not set
+
+##
+## file: drivers/staging/rt2870/Kconfig
+##
+# CONFIG_RT2870 is not set
+
+##
+## file: drivers/staging/rt3070/Kconfig
+##
+# CONFIG_RT3070 is not set
+
+##
+## file: drivers/staging/rtl8187se/Kconfig
+##
+# CONFIG_RTL8187SE is not set
+
+##
+## file: drivers/staging/serqt_usb2/Kconfig
+##
+# CONFIG_USB_SERIAL_QUATECH2 is not set
+
+##
+## file: drivers/staging/slicoss/Kconfig
+##
+# CONFIG_SLICOSS is not set
+
+##
+## file: drivers/staging/speakup/Kconfig
+##
+CONFIG_SPEAKUP_SYNTH_ACNTSA=m
+CONFIG_SPEAKUP_SYNTH_ACNTPC=m
+CONFIG_SPEAKUP_SYNTH_APOLLO=m
+CONFIG_SPEAKUP_SYNTH_AUDPTR=m
+CONFIG_SPEAKUP_SYNTH_BNS=m
+CONFIG_SPEAKUP_SYNTH_DECTLK=m
+CONFIG_SPEAKUP_SYNTH_DECEXT=m
+CONFIG_SPEAKUP_SYNTH_DTLK=m
+CONFIG_SPEAKUP_SYNTH_KEYPC=m
+CONFIG_SPEAKUP_SYNTH_LTLK=m
+CONFIG_SPEAKUP_SYNTH_SOFT=m
+CONFIG_SPEAKUP_SYNTH_SPKOUT=m
+CONFIG_SPEAKUP_SYNTH_TXPRT=m
+CONFIG_SPEAKUP_SYNTH_DUMMY=m
+CONFIG_SPEAKUP=m
+
+##
+## file: drivers/staging/stlc45xx/Kconfig
+##
+# CONFIG_STLC45XX is not set
+
+##
+## file: drivers/staging/sxg/Kconfig
+##
+# CONFIG_SXG is not set
+
+##
+## file: drivers/staging/udlfb/Kconfig
+##
+# CONFIG_FB_UDL is not set
+
+##
+## file: drivers/staging/usbip/Kconfig
+##
+# CONFIG_USB_IP_COMMON is not set
+
+##
+## file: drivers/staging/vt6655/Kconfig
+##
+# CONFIG_VT6655 is not set
+
+##
+## file: drivers/staging/winbond/Kconfig
+##
+# CONFIG_W35UND is not set
+
+##
+## file: drivers/staging/wlan-ng/Kconfig
+##
+# CONFIG_PRISM2_USB is not set
 
 ##
 ## file: drivers/uio/Kconfig
