Include new script gcc-x86_32-has-stack-protector.sh
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14401 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/scripts/Makefile
+++ b/linux-kbuild-2.6/scripts/Makefile
@@ -19,6 +19,7 @@ SCRIPTS =  \
 	checkstack.pl \
 	checkversion.pl \
 	gcc-version.sh \
+	gcc-x86_32-has-stack-protector.sh \
 	gcc-x86_64-has-stack-protector.sh \
 	gen_initramfs_list.sh \
 	kernel-doc \
