--- a/linux-kbuild-2.6/debian/templates/control.source.in
+++ b/linux-kbuild-2.6/debian/templates/control.source.in
@@ -2,6 +2,6 @@ Source: linux-kbuild-@major@
 Section: devel
 Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
-Uploaders: Bastian Blank <waldi@debian.org>
+Uploaders: Bastian Blank <waldi@debian.org>, Ben Hutchings <ben@decadent.org.uk>
 Standards-Version: 3.7.3
 Build-Depends: debhelper (>> 7), python
