topconfig set LSM_MMAP_MIN_ADDR to redcommended 32768
for x86_32 to zero, for x86_64 and ia64 to 65536.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14420 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/ia64/config
+++ b/linux-2.6/debian/config/ia64/config
@@ -843,6 +843,11 @@ CONFIG_IRLAN=m
 CONFIG_IRNET=m
 
 ##
+## file: security/Kconfig
+##
+CONFIG_LSM_MMAP_MIN_ADDR=65536
+
+##
 ## file: sound/Kconfig
 ##
 CONFIG_SOUND=y
