debian/config: Reorder.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14435 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/amd64/config
+++ b/linux-2.6/debian/config/amd64/config
@@ -333,10 +333,10 @@ CONFIG_INPUT_JOYSTICK=y
 ##
 CONFIG_INPUT_KEYBOARD=y
 CONFIG_KEYBOARD_ATKBD=y
-CONFIG_KEYBOARD_SUNKBD=m
 CONFIG_KEYBOARD_LKKBD=m
-CONFIG_KEYBOARD_XTKBD=m
 CONFIG_KEYBOARD_NEWTON=m
+CONFIG_KEYBOARD_SUNKBD=m
+CONFIG_KEYBOARD_XTKBD=m
 
 ##
 ## file: drivers/input/misc/Kconfig
@@ -1092,7 +1092,6 @@ CONFIG_W83977F_WDT=m
 CONFIG_MACHZ_WDT=m
 CONFIG_PCIPCWATCHDOG=m
 CONFIG_WDTPCI=m
-CONFIG_WDT_501_PCI=y
 CONFIG_USBPCWATCHDOG=m
 
 ##
@@ -1283,4 +1282,9 @@ CONFIG_SND_HDA_INTEL=m
 ## file: sound/usb/Kconfig
 ##
 CONFIG_SND_USB_USX2Y=m
+
+##
+## file: unknown
+##
+CONFIG_WDT_501_PCI=y
 
