--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2,7 +2,6 @@
 ## file: block/Kconfig
 ##
 CONFIG_BLOCK=y
-CONFIG_LBD=y
 CONFIG_BLK_DEV_BSG=y
 CONFIG_BLK_DEV_INTEGRITY=y
 
@@ -391,12 +390,6 @@ CONFIG_SENSORS_APPLESMC=m
 ##
 ## file: drivers/i2c/Kconfig
 ##
-CONFIG_IEEE802154_DRIVERS=m
-CONFIG_IEEE802154_FAKEHARD=m
-
-##
-## file: drivers/i2c/Kconfig
-##
 CONFIG_I2C_HELPER_AUTO=y
 
 ##
@@ -416,7 +409,6 @@ CONFIG_I2C_PCA_PLATFORM=m
 CONFIG_DS1682=m
 CONFIG_PCF8575=m
 CONFIG_SENSORS_PCA9539=m
-CONFIG_SENSORS_MAX6875=m
 CONFIG_SENSORS_TSL2550=m
 
 ##
@@ -444,6 +436,12 @@ CONFIG_I7300_IDLE=m
 ## file: drivers/ieee1394/Kconfig
 ##
 # CONFIG_IEEE1394 is not set
+
+##
+## file: drivers/ieee802154/Kconfig
+##
+CONFIG_IEEE802154_DRIVERS=m
+CONFIG_IEEE802154_FAKEHARD=m
 
 ##
 ## file: drivers/infiniband/Kconfig
@@ -575,9 +573,9 @@ CONFIG_INPUT_PCF50633_PMU=m
 ## file: drivers/input/mouse/Kconfig
 ##
 CONFIG_MOUSE_PS2_ALPS=y
-CONFIG_MOUSE_SYNAPTICS_I2C=m
 # CONFIG_MOUSE_PS2_ELANTECH is not set
 # CONFIG_MOUSE_PS2_TOUCHKIT is not set
+CONFIG_MOUSE_SYNAPTICS_I2C=m
 
 ##
 ## file: drivers/input/touchscreen/Kconfig
@@ -628,7 +626,6 @@ CONFIG_GIGASET_BASE=m
 CONFIG_GIGASET_M105=m
 CONFIG_GIGASET_M101=m
 # CONFIG_GIGASET_DEBUG is not set
-# CONFIG_GIGASET_UNDOCREQ is not set
 
 ##
 ## file: drivers/isdn/hardware/mISDN/Kconfig
@@ -659,7 +656,6 @@ CONFIG_LEDS_NET48XX=m
 CONFIG_LEDS_ALIX2=m
 CONFIG_LEDS_PCA9532=m
 CONFIG_LEDS_LP3944=m
-CONFIG_LEDS_LP5521=m
 CONFIG_LEDS_PCA955X=m
 CONFIG_LEDS_WM8350=m
 CONFIG_LEDS_DAC124S085=m
@@ -826,12 +822,6 @@ CONFIG_DVB_DUMMY_FE=m
 ## file: drivers/media/dvb/pluto2/Kconfig
 ##
 CONFIG_DVB_PLUTO2=m
-
-##
-## file: drivers/media/dvb/siano/Kconfig
-##
-CONFIG_DVB_SIANO_SMS1XXX=m
-CONFIG_DVB_SIANO_SMS1XXX_SMS_IDS=y
 
 ##
 ## file: drivers/media/dvb/ttpci/Kconfig
@@ -1171,14 +1161,18 @@ CONFIG_SGI_XP=m
 CONFIG_SGI_GRU=m
 # CONFIG_SGI_GRU_DEBUG is not set
 CONFIG_ISL29003=m
-CONFIG_CB710_CORE=m
-# CONFIG_CB710_DEBUG is not set
 
 ##
 ## file: drivers/misc/c2port/Kconfig
 ##
 CONFIG_C2PORT=m
 CONFIG_C2PORT_DURAMAR_2150=m
+
+##
+## file: drivers/misc/cb710/Kconfig
+##
+CONFIG_CB710_CORE=m
+# CONFIG_CB710_DEBUG is not set
 
 ##
 ## file: drivers/misc/eeprom/Kconfig
@@ -1283,7 +1277,6 @@ CONFIG_MTD_UBI_BEB_RESERVE=1
 ## file: drivers/net/Kconfig
 ##
 CONFIG_NETDEVICES=y
-CONFIG_COMPAT_NET_DEV_OPS=y
 CONFIG_IFB=m
 CONFIG_BONDING=m
 CONFIG_MACVLAN=m
@@ -1559,18 +1552,18 @@ CONFIG_MAC80211_HWSIM=m
 CONFIG_MWL8K=m
 
 ##
-## file: drivers/net/wireless/ar9170/Kconfig
+## file: drivers/net/wireless/ath/ar9170/Kconfig
 ##
 CONFIG_AR9170_USB=m
 
 ##
-## file: drivers/net/wireless/ath5k/Kconfig
+## file: drivers/net/wireless/ath/ath5k/Kconfig
 ##
 CONFIG_ATH5K=m
 # CONFIG_ATH5K_DEBUG is not set
 
 ##
-## file: drivers/net/wireless/ath9k/Kconfig
+## file: drivers/net/wireless/ath/ath9k/Kconfig
 ##
 CONFIG_ATH9K=m
 # CONFIG_ATH9K_DEBUG is not set
@@ -1619,7 +1612,6 @@ CONFIG_IPW2200_QOS=y
 ##
 CONFIG_IWLWIFI=m
 CONFIG_IWLWIFI_LEDS=y
-CONFIG_IWLWIFI_RFKILL=y
 CONFIG_IWLWIFI_SPECTRUM_MEASUREMENT=y
 # CONFIG_IWLWIFI_DEBUG is not set
 CONFIG_IWLAGN=m
@@ -1858,8 +1850,6 @@ CONFIG_SCSI_PPA=m
 CONFIG_SCSI_IMM=m
 # CONFIG_SCSI_IZIP_EPP16 is not set
 # CONFIG_SCSI_IZIP_SLOW_CTR is not set
-CONFIG_SCSI_MVSAS=m
-# CONFIG_SCSI_MVSAS_DEBUG is not set
 CONFIG_SCSI_STEX=m
 CONFIG_SCSI_SYM53C8XX_MMIO=y
 # CONFIG_SCSI_IPR is not set
@@ -1931,6 +1921,12 @@ CONFIG_MEGARAID_SAS=m
 CONFIG_SCSI_MPT2SAS=m
 CONFIG_SCSI_MPT2SAS_MAX_SGE=128
 # CONFIG_SCSI_MPT2SAS_LOGGING is not set
+
+##
+## file: drivers/scsi/mvsas/Kconfig
+##
+CONFIG_SCSI_MVSAS=m
+# CONFIG_SCSI_MVSAS_DEBUG is not set
 
 ##
 ## file: drivers/scsi/osd/Kconfig
@@ -2157,6 +2153,7 @@ CONFIG_STAGING=y
 ##
 ## file: drivers/staging/speakup/Kconfig
 ##
+CONFIG_SPEAKUP=m
 CONFIG_SPEAKUP_SYNTH_ACNTSA=m
 CONFIG_SPEAKUP_SYNTH_ACNTPC=m
 CONFIG_SPEAKUP_SYNTH_APOLLO=m
@@ -2171,7 +2168,6 @@ CONFIG_SPEAKUP_SYNTH_SOFT=m
 CONFIG_SPEAKUP_SYNTH_SPKOUT=m
 CONFIG_SPEAKUP_SYNTH_TXPRT=m
 CONFIG_SPEAKUP_SYNTH_DUMMY=m
-CONFIG_SPEAKUP=m
 
 ##
 ## file: drivers/staging/stlc45xx/Kconfig
@@ -2466,12 +2462,11 @@ CONFIG_SBC_EPX_C3_WATCHDOG=m
 ##
 ## file: fs/Kconfig
 ##
+CONFIG_CUSE=m
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
-CONFIG_CUSE=m
 CONFIG_HUGETLBFS=y
 CONFIG_MISC_FILESYSTEMS=y
-CONFIG_NILFS2_FS=m
 CONFIG_NETWORK_FILESYSTEMS=y
 
 ##
@@ -2496,6 +2491,20 @@ CONFIG_AFFS_FS=m
 CONFIG_AFS_FS=m
 # CONFIG_AFS_DEBUG is not set
 CONFIG_AFS_FSCACHE=y
+
+##
+## file: fs/aufs/Kconfig
+##
+CONFIG_AUFS_FS=m
+## choice: Maximum number of branches
+CONFIG_AUFS_BRANCH_MAX_127=y
+## end choice
+# CONFIG_AUFS_HINOTIFY is not set
+# CONFIG_AUFS_EXPORT is not set
+# CONFIG_AUFS_SHWH is not set
+# CONFIG_AUFS_BR_RAMFS is not set
+# CONFIG_AUFS_BR_FUSE is not set
+# CONFIG_AUFS_DEBUG is not set
 
 ##
 ## file: fs/autofs/Kconfig
@@ -2748,6 +2757,11 @@ CONFIG_NFSD_V3_ACL=y
 CONFIG_NFSD_V4=y
 
 ##
+## file: fs/nilfs2/Kconfig
+##
+CONFIG_NILFS2_FS=m
+
+##
 ## file: fs/nls/Kconfig
 ##
 CONFIG_NLS=m
@@ -2790,11 +2804,6 @@ CONFIG_NLS_ISO8859_15=m
 CONFIG_NLS_KOI8_R=m
 CONFIG_NLS_KOI8_U=m
 CONFIG_NLS_UTF8=m
-
-##
-## file: fs/notify/Kconfig
-##
-CONFIG_FSNOTIFY=y
 
 ##
 ## file: fs/notify/dnotify/Kconfig
@@ -2985,7 +2994,6 @@ CONFIG_SYSCTL_SYSCALL=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_ALL is not set
 # CONFIG_KALLSYMS_EXTRA_PASS is not set
-CONFIG_STRIP_ASM_SYMS=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
@@ -2996,6 +3004,7 @@ CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
 CONFIG_VM_EVENT_COUNTERS=y
+CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_COMPAT_BRK is not set
 ## choice: Choose SLAB allocator
 CONFIG_SLAB=y
@@ -3012,6 +3021,11 @@ CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 
 ##
+## file: kernel/gcov/Kconfig
+##
+# CONFIG_GCOV_KERNEL is not set
+
+##
 ## file: kernel/Kconfig.hz
 ##
 ## choice: Timer frequency
@@ -3020,11 +3034,6 @@ CONFIG_HZ_250=y
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_1000 is not set
 ## end choice
-
-##
-## file: kernel/gcov/Kconfig
-##
-# CONFIG_GCOV_KERNEL is not set
 
 ##
 ## file: kernel/power/Kconfig
@@ -3057,11 +3066,8 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_IRQSOFF_TRACER is not set
 # CONFIG_SYSPROF_TRACER is not set
 # CONFIG_SCHED_TRACER is not set
-# CONFIG_CONTEXT_SWITCH_TRACER is not set
-# CONFIG_EVENT_TRACER is not set
 # CONFIG_FTRACE_SYSCALLS is not set
 CONFIG_BOOT_TRACER=y
-# CONFIG_TRACE_BRANCH_PROFILING is not set
 # CONFIG_POWER_TRACER is not set
 # CONFIG_STACK_TRACER is not set
 # CONFIG_HW_BRANCH_TRACER is not set
@@ -3140,7 +3146,6 @@ CONFIG_SYSCTL_SYSCALL_CHECK=y
 ##
 ## file: mm/Kconfig
 ##
-CONFIG_UNEVICTABLE_LRU=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 
 ##
@@ -3686,7 +3691,6 @@ CONFIG_SECURITY_NETWORK_XFRM=y
 CONFIG_SECURITY_FILE_CAPABILITIES=y
 # CONFIG_SECURITY_ROOTPLUG is not set
 CONFIG_LSM_MMAP_MIN_ADDR=32768
-CONFIG_SECURITY_DEFAULT_MMAP_MIN_ADDR=4096
 
 ##
 ## file: security/integrity/ima/Kconfig
@@ -3825,18 +3829,6 @@ CONFIG_SND_USB_CAIAQ_INPUT=y
 CONFIG_SND_USB_US122L=m
 
 ##
-## file: ubuntu/aufs/Kconfig
-##
-CONFIG_AUFS_FS=m
-CONFIG_AUFS_BRANCH_MAX_127=y
-# CONFIG_AUFS_HINOTIFY is not set
-# CONFIG_AUFS_EXPORT is not set
-# CONFIG_AUFS_SHWH is not set
-# CONFIG_AUFS_BR_RAMFS is not set
-# CONFIG_AUFS_BR_FUSE is not set
-# CONFIG_AUFS_DEBUG is not set
-
-##
 ## file: usr/Kconfig
 ##
 CONFIG_INITRAMFS_SOURCE=""
@@ -3844,7 +3836,18 @@ CONFIG_INITRAMFS_SOURCE=""
 ##
 ## file: unknown
 ##
+CONFIG_COMPAT_NET_DEV_OPS=y
+CONFIG_DVB_SIANO_SMS1XXX=m
+CONFIG_DVB_SIANO_SMS1XXX_SMS_IDS=y
 # CONFIG_DYNAMIC_PRINTK_DEBUG is not set
+# CONFIG_EVENT_TRACER is not set
+# CONFIG_GIGASET_UNDOCREQ is not set
+CONFIG_IWLWIFI_RFKILL=y
 # CONFIG_KPROBES is not set
+CONFIG_LBD=y
+CONFIG_LEDS_LP5521=m
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
+CONFIG_SECURITY_DEFAULT_MMAP_MIN_ADDR=4096
+CONFIG_SENSORS_MAX6875=m
+CONFIG_UNEVICTABLE_LRU=y
 
