--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -8,7 +8,6 @@ CONFIG_OPROFILE_IBS=y
 ## file: arch/x86/Kconfig
 ##
 CONFIG_SPARSE_IRQ=y
-CONFIG_NUMA_MIGRATE_IRQ_DESC=y
 CONFIG_X86_MPPARSE=y
 # CONFIG_X86_EXTENDED_PLATFORM is not set
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
@@ -53,7 +52,6 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_PCI=y
 CONFIG_DMAR=y
 # CONFIG_DMAR_DEFAULT_ON is not set
-CONFIG_DMAR_GFX_WA=y
 CONFIG_INTR_REMAP=y
 CONFIG_IA32_EMULATION=y
 CONFIG_IA32_AOUT=y
@@ -111,15 +109,6 @@ CONFIG_XEN=y
 # CONFIG_XEN_DEBUG_FS is not set
 
 ##
-## file: drivers/char/hw_random/Kconfig
-##
-CONFIG_HW_RANDOM=m
-CONFIG_HW_RANDOM_INTEL=m
-CONFIG_HW_RANDOM_AMD=m
-CONFIG_HW_RANDOM_VIA=m
-CONFIG_HW_RANDOM_GEODE=m
-
-##
 ## file: drivers/acpi/Kconfig
 ##
 CONFIG_ACPI=y
@@ -153,6 +142,15 @@ CONFIG_XEN_BLKDEV_FRONTEND=m
 CONFIG_HVC_XEN=y
 
 ##
+## file: drivers/char/hw_random/Kconfig
+##
+CONFIG_HW_RANDOM=m
+CONFIG_HW_RANDOM_INTEL=m
+CONFIG_HW_RANDOM_AMD=m
+CONFIG_HW_RANDOM_GEODE=m
+CONFIG_HW_RANDOM_VIA=m
+
+##
 ## file: drivers/cpufreq/Kconfig
 ##
 ## choice: Default CPUFreq governor
@@ -169,8 +167,8 @@ CONFIG_EDAC=y
 # CONFIG_EDAC_DEBUG is not set
 CONFIG_EDAC_MM_EDAC=m
 CONFIG_EDAC_AMD64=m
-CONFIG_EDAC_AMD76X=m
 # CONFIG_EDAC_AMD64_ERROR_INJECTION is not set
+CONFIG_EDAC_AMD76X=m
 CONFIG_EDAC_E7XXX=m
 CONFIG_EDAC_E752X=m
 CONFIG_EDAC_I82875P=m
@@ -203,7 +201,6 @@ CONFIG_THINKPAD_ACPI=m
 # CONFIG_THINKPAD_ACPI_DEBUGFACILITIES is not set
 # CONFIG_THINKPAD_ACPI_DEBUG is not set
 # CONFIG_THINKPAD_ACPI_UNSAFE_LEDS is not set
-CONFIG_THINKPAD_ACPI_BAY=y
 CONFIG_THINKPAD_ACPI_VIDEO=y
 CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
 # CONFIG_INTEL_MENLOW is not set
@@ -288,4 +285,11 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
 ## file: net/ipv6/Kconfig
 ##
 CONFIG_IPV6=y
+
+##
+## file: unknown
+##
+CONFIG_DMAR_GFX_WA=y
+CONFIG_NUMA_MIGRATE_IRQ_DESC=y
+CONFIG_THINKPAD_ACPI_BAY=y
 
