--- a/linux-2.6/debian/config/i386/config
+++ b/linux-2.6/debian/config/i386/config
@@ -365,10 +365,10 @@ CONFIG_INPUT_JOYSTICK=y
 ##
 CONFIG_INPUT_KEYBOARD=y
 CONFIG_KEYBOARD_ATKBD=y
-CONFIG_KEYBOARD_SUNKBD=m
 CONFIG_KEYBOARD_LKKBD=m
-CONFIG_KEYBOARD_XTKBD=m
 CONFIG_KEYBOARD_NEWTON=m
+CONFIG_KEYBOARD_SUNKBD=m
+CONFIG_KEYBOARD_XTKBD=m
 
 ##
 ## file: drivers/input/misc/Kconfig
@@ -1282,7 +1282,6 @@ CONFIG_MIXCOMWD=m
 CONFIG_WDT=m
 CONFIG_PCIPCWATCHDOG=m
 CONFIG_WDTPCI=m
-CONFIG_WDT_501_PCI=y
 CONFIG_USBPCWATCHDOG=m
 
 ##
@@ -1515,4 +1514,9 @@ CONFIG_SND_HDA_INTEL=m
 ## file: sound/usb/Kconfig
 ##
 CONFIG_SND_USB_USX2Y=m
+
+##
+## file: unknown
+##
+CONFIG_WDT_501_PCI=y
 
