debian/config/config: Fix some options.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14439 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -824,6 +824,13 @@ CONFIG_DVB_DUMMY_FE=m
 CONFIG_DVB_PLUTO2=m
 
 ##
+## file: drivers/media/dvb/siano/Kconfig
+##
+CONFIG_SMS_SIANO_MDTV=m
+CONFIG_SMS_USB_DRV=m
+CONFIG_SMS_SDIO_DRV=m
+
+##
 ## file: drivers/media/dvb/ttpci/Kconfig
 ##
 CONFIG_DVB_AV7110=m
@@ -3837,8 +3844,6 @@ CONFIG_INITRAMFS_SOURCE=""
 ## file: unknown
 ##
 CONFIG_COMPAT_NET_DEV_OPS=y
-CONFIG_DVB_SIANO_SMS1XXX=m
-CONFIG_DVB_SIANO_SMS1XXX_SMS_IDS=y
 # CONFIG_DYNAMIC_PRINTK_DEBUG is not set
 # CONFIG_EVENT_TRACER is not set
 # CONFIG_GIGASET_UNDOCREQ is not set
