Build and install all programs and docs (except test programs)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14618 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/tgt/debian/rules
+++ b/tgt/debian/rules
@@ -13,14 +13,14 @@ build: build-stamp
 
 build-stamp: 
 	dh_testdir
-	$(MAKE) -C usr/ ISCSI=1
+	$(MAKE) ISCSI=1
 	touch $@
 
 clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
-	-$(MAKE) -C usr/ clean
+	$(MAKE) clean
 	dh_clean 
 
 install: build
