--- a/tgt/debian/control
+++ b/tgt/debian/control
@@ -2,7 +2,7 @@ Source: tgt
 Section: net
 Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
-Uploaders: Frederik Schüler <fs@debian.org>
+Uploaders: Frederik Schüler <fs@debian.org>, Ben Hutchings <ben@decadent.org.uk>
 Build-Depends: debhelper (>= 5), libssl-dev
 Standards-Version: 3.7.2
 
