--- a/tgt/debian/control
+++ b/tgt/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Frederik Schüler <fs@debian.org>, Ben Hutchings <ben@decadent.org.uk>
-Build-Depends: debhelper (>= 5), libssl-dev
+Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
 
 Package: tgt
