Use upstream install rules instead of our own file lists
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14626 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/tgt/debian/rules
+++ b/tgt/debian/rules
@@ -27,8 +27,7 @@ install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k 
-	dh_installdirs
-	dh_install
+	$(MAKE) ISCSI=1 DESTDIR=$(CURDIR)/debian/tgt install
 
 binary-indep: build install
 
@@ -36,8 +35,6 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs 
-	dh_installdocs
-	dh_installman
 	dh_link
 	dh_strip
 	dh_compress
