Update Standards-Version to 3.8.3
Add Homepage field.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14627 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/tgt/debian/control
+++ b/tgt/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Frederik Schüler <fs@debian.org>, Ben Hutchings <ben@decadent.org.uk>
 Build-Depends: debhelper (>= 5)
-Standards-Version: 3.7.2
+Standards-Version: 3.8.3
+Homepage: http://stgt.berlios.de/
 
 Package: tgt
 Architecture: any
