Update package description
Fix grammar.
Mention 'SCSI' in the short description.
Update list of drivers.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14630 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/tgt/debian/control
+++ b/tgt/debian/control
@@ -10,23 +10,15 @@ Homepage: http://stgt.berlios.de/
 Package: tgt
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Linux target framework user-space tools
- Linux target framework (tgt) aims to simplify various SCSI target
- driver (iSCSI, Fibre Channel, SRP, etc) creation and maintenance.
+Description: Linux SCSI target user-space tools
+ The Linux target framework (tgt) allows a Linux system to provide SCSI
+ devices (targets) over networked SCSI transports.
  .
  Tgt consists of kernel modules, user-space daemon, and user-space
- tools. Some target drivers uses all of them and some use only
- user-space daemon and tools (i.e. they completely runs in user space).
- .
- This package contains the user-space daemon and tools, a recent Linux
+ This package contains the user-space daemon and tools; a recent Linux
  kernel is required for the modules.
  .
- Currently, tgt supports three target drivers:
+ This package includes drivers for:
  .
-  - IBM VIO server (ibmvstgt)
-  - iSCSI
-  - Xen vscsifront/back
- .
- Note that tgt is under active development. Don't play with important
- data.
-
+  - FCoE (Fibre Channel over Ethernet)
+  - iSCSI (SCSI over IP)
