--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -852,9 +852,9 @@ CONFIG_DVB_TTUSB_DEC=m
 ## file: drivers/media/radio/Kconfig
 ##
 CONFIG_RADIO_ADAPTERS=y
+CONFIG_RADIO_SI470X=y
 CONFIG_USB_MR800=m
 CONFIG_RADIO_TEA5764=m
-CONFIG_RADIO_SI470X=y
 
 ##
 ## file: drivers/media/radio/si470x/Kconfig
@@ -2425,6 +2425,9 @@ CONFIG_W1_SLAVE_BQ27000=m
 ##
 ## file: drivers/watchdog/Kconfig
 ##
+CONFIG_WATCHDOG=y
+# CONFIG_WATCHDOG_NOWAYOUT is not set
+CONFIG_SOFT_WATCHDOG=m
 CONFIG_WM8350_WATCHDOG=m
 CONFIG_ITCO_WDT=m
 # CONFIG_ITCO_VENDOR_SUPPORT is not set
