* debian/changelog: Update. * debian/config/kernelarch-x86/config, debian/config/powerpc/config,   debian/config/sparc/config: Set USB to module. * debian/config/kernelarch-x86/config-arch-32,   debian/config/kernelarch-x86/config-arch-64: Remove USB.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14732 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -719,7 +719,7 @@ CONFIG_PHONE_IXJ_PCMCIA=m
 ##
 ## file: drivers/usb/Kconfig
 ##
-CONFIG_USB=y
+CONFIG_USB=m
 
 ##
 ## file: drivers/usb/atm/Kconfig
