* debian/changelog: Update. * debian/config/kernelarch-x86/config: Set AGP and AGP_AMD64 to module. * debian/config/kernelarch-x86/config-arch-32,   debian/config/kernelarch-x86/config-arch-64: Remove duplicated options.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14733 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -263,6 +263,8 @@ CONFIG_HANGCHECK_TIMER=m
 ##
 ## file: drivers/char/agp/Kconfig
 ##
+CONFIG_AGP=m
+CONFIG_AGP_AMD64=m
 CONFIG_AGP_INTEL=m
 CONFIG_AGP_SIS=m
 CONFIG_AGP_VIA=m
