--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1287,6 +1287,7 @@ CONFIG_MTD_UBI_BEB_RESERVE=1
 ##
 CONFIG_NETDEVICES=y
 CONFIG_IFB=m
+CONFIG_DUMMY=m
 CONFIG_BONDING=m
 CONFIG_MACVLAN=m
 CONFIG_EQUALIZER=m
