Add linux-base package.
* debian/rules.real: Build linux-base.
* debian/templates/control.main.in
* debian/tree: New directory.
* debian/tree/linux-base: Add empty tree for linux-base.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14737 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.main.in
+++ b/linux-2.6/debian/templates/control.main.in
@@ -77,3 +77,10 @@ Description: Support files for Linux @upstreamversion@
  e.g. scripts to handle ABI information and for generation of
  build system meta data.
 
+Package: linux-base
+Architecture: all
+Depends: ${misc:Depends}
+Description: Linux image base package
+ This package contains files and support scripts for all Linux
+ images.
+
