* debian/changelog: Update. * debian/config/config: Set MEMORY_HOTPLUG and MEMORY_HOTREMOVE. * debian/config/powerpc/config.powerpc64: Remove unset of MEMORY_HOTPLUG.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14743 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3140,6 +3140,8 @@ CONFIG_SYSCTL_SYSCALL_CHECK=y
 ##
 ## file: mm/Kconfig
 ##
+CONFIG_MEMORY_HOTPLUG=y
+CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_MIGRATION=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 
