debian/config/config: Explicitely unset SLOW_WORK_DEBUG.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14744 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3005,6 +3005,7 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 ## end choice
 CONFIG_PROFILING=y
+# CONFIG_SLOW_WORK_DEBUG is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
