--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -674,6 +674,10 @@ CONFIG_MD_RAID0=m
 CONFIG_MD_RAID1=m
 CONFIG_MD_RAID10=m
 CONFIG_MD_RAID456=m
+#. Experimental
+# CONFIG_MULTICORE_RAID456 is not set
+#. Self-test
+# CONFIG_ASYNC_RAID6_TEST is not set
 CONFIG_MD_MULTIPATH=m
 CONFIG_MD_FAULTY=m
 CONFIG_BLK_DEV_DM=m
