--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2637,6 +2637,7 @@ CONFIG_FSCACHE=m
 CONFIG_FSCACHE_STATS=y
 # CONFIG_FSCACHE_HISTOGRAM is not set
 # CONFIG_FSCACHE_DEBUG is not set
+# CONFIG_FSCACHE_OBJECT_LIST is not set
 
 ##
 ## file: fs/fuse/Kconfig
