--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2218,8 +2218,12 @@ CONFIG_USB_TMC=m
 ##
 ## file: drivers/usb/core/Kconfig
 ##
+# CONFIG_USB_DEBUG is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+CONFIG_USB_DEVICEFS=y
 # CONFIG_USB_DEVICE_CLASS is not set
+# CONFIG_USB_DYNAMIC_MINORS is not set
+# CONFIG_USB_SUSPEND is not set
 
 ##
 ## file: drivers/usb/gadget/Kconfig
