--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2223,7 +2223,7 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICEFS=y
 # CONFIG_USB_DEVICE_CLASS is not set
 # CONFIG_USB_DYNAMIC_MINORS is not set
-# CONFIG_USB_SUSPEND is not set
+CONFIG_USB_SUSPEND=y
 
 ##
 ## file: drivers/usb/gadget/Kconfig
