--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2212,6 +2212,8 @@ CONFIG_USB_XUSBATM=m
 ##
 ## file: drivers/usb/class/Kconfig
 ##
+CONFIG_USB_ACM=m
+CONFIG_USB_PRINTER=m
 CONFIG_USB_WDM=m
 CONFIG_USB_TMC=m
 
