debian/config/config: Always set USB_MDC800 and USB_MICROTEK.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14751 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2248,6 +2248,12 @@ CONFIG_USB_WHCI_HCD=m
 CONFIG_USB_HWA_HCD=m
 
 ##
+## file: drivers/usb/image/Kconfig
+##
+CONFIG_USB_MDC800=m
+CONFIG_USB_MICROTEK=m
+
+##
 ## file: drivers/usb/misc/Kconfig
 ##
 CONFIG_USB_EMI62=m
