--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2280,6 +2280,7 @@ CONFIG_USB_VST=m
 ##
 ## file: drivers/usb/misc/sisusbvga/Kconfig
 ##
+CONFIG_USB_SISUSBVGA=m
 CONFIG_USB_SISUSBVGA_CON=y
 
 ##
