--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -183,7 +183,7 @@ CONFIG_EXTRA_FIRMWARE=""
 ##
 CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_LOOP=m
-CONFIG_BLK_DEV_CRYPTOLOOP=m
+# CONFIG_BLK_DEV_CRYPTOLOOP is not set
 CONFIG_BLK_DEV_NBD=m
 CONFIG_BLK_DEV_OSD=m
 CONFIG_BLK_DEV_RAM=m
