scripts/Makefile: Install new file correctly as data.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14766 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/scripts/Makefile
+++ b/linux-kbuild-2.6/scripts/Makefile
@@ -12,7 +12,8 @@ DATA = \
 	Makefile.lib \
 	Makefile.modinst \
 	Makefile.modpost \
-	mkversion
+	mkversion \
+	module-common.lds
 
 SCRIPTS =  \
 	checkincludes.pl \
@@ -27,7 +28,6 @@ SCRIPTS =  \
 	makelst \
 	mksysmap \
 	mkuboot.sh \
-	module-common.lds \
 	namespace.pl \
 	patch-kernel \
 	setlocalversion \
