--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3169,6 +3169,7 @@ CONFIG_SYSCTL_SYSCALL_CHECK=y
 CONFIG_MEMORY_HOTPLUG=y
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_MIGRATION=y
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 
 ##
