* debian/changelog: Update. * debian/config/s390/config: Enable SECCOMP.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14778 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/s390/config
+++ b/linux-2.6/debian/config/s390/config
@@ -28,6 +28,7 @@ CONFIG_S390_HYPFS_FS=y
 CONFIG_KEXEC=y
 # CONFIG_ZFCPDUMP is not set
 CONFIG_S390_GUEST=y
+CONFIG_SECCOMP=y
 
 ##
 ## file: arch/s390/kvm/Kconfig
