--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2512,9 +2512,13 @@ CONFIG_AFS_FSCACHE=y
 CONFIG_AUFS_FS=m
 ## choice: Maximum number of branches
 CONFIG_AUFS_BRANCH_MAX_127=y
+# CONFIG_AUFS_BRANCH_MAX_511 is not set
+# CONFIG_AUFS_BRANCH_MAX_1023 is not set
+# CONFIG_AUFS_BRANCH_MAX_32767 is not set
 ## end choice
 # CONFIG_AUFS_HINOTIFY is not set
 # CONFIG_AUFS_EXPORT is not set
+# CONFIG_AUFS_RDU is not set
 # CONFIG_AUFS_SHWH is not set
 # CONFIG_AUFS_BR_RAMFS is not set
 # CONFIG_AUFS_BR_FUSE is not set
@@ -2636,6 +2640,7 @@ CONFIG_EXT4_FS=m
 CONFIG_EXT4_FS_XATTR=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
+# CONFIG_EXT4_DEBUG is not set
 
 ##
 ## file: fs/fat/Kconfig
