* debian/changelog: Update. * debian/config/s390/config: Enable ZVM_WATCHDOG.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14780 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/s390/config
+++ b/linux-2.6/debian/config/s390/config
@@ -130,6 +130,11 @@ CONFIG_QETH_L3=m
 CONFIG_ZFCP=m
 
 ##
+## file: drivers/watchdog/Kconfig
+##
+CONFIG_ZVM_WATCHDOG=m
+
+##
 ## file: fs/partitions/Kconfig
 ##
 # CONFIG_ACORN_PARTITION is not set
