Enable vmxnet3 (VMware guest paravirt net driver) (Closes: #562046)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14805 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1382,6 +1382,7 @@ CONFIG_SLIP_MODE_SLIP6=y
 CONFIG_NETCONSOLE=m
 CONFIG_NETCONSOLE_DYNAMIC=y
 CONFIG_VIRTIO_NET=m
+CONFIG_VMXNET3=m
 
 ##
 ## file: drivers/net/appletalk/Kconfig
