topconfig set modular CAN_EMS_USB
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14822 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1416,6 +1416,11 @@ CONFIG_CAN_EMS_PCI=m
 CONFIG_CAN_KVASER_PCI=m
 
 ##
+## file: drivers/net/can/usb/Kconfig
+##
+CONFIG_CAN_EMS_USB=m
+
+##
 ## file: drivers/net/hamradio/Kconfig
 ##
 CONFIG_MKISS=m
