--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -199,6 +199,8 @@ CONFIG_VIRTIO_BLK=m
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTSDIO=m
 CONFIG_BT_HCIUART_LL=y
+CONFIG_BT_MRVL=m
+CONFIG_BT_MRVL_SDIO=m
 
 ##
 ## file: drivers/char/Kconfig
