topconfig enable modular BE2ISCSI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14824 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1931,6 +1931,11 @@ CONFIG_SCSI_AIC94XX=m
 ##
 ## file: drivers/scsi/bnx2i/Kconfig
 ##
+CONFIG_BE2ISCSI=m
+
+##
+## file: drivers/scsi/bnx2i/Kconfig
+##
 CONFIG_SCSI_BNX2_ISCSI=m
 
 ##
