topconfig set modular SCSI_PMCRAID
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14825 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1900,6 +1900,7 @@ CONFIG_SCSI_SYM53C8XX_MMIO=y
 # CONFIG_SCSI_IPR is not set
 CONFIG_SCSI_LPFC=m
 # CONFIG_SCSI_LPFC_DEBUG_FS is not set
+CONFIG_SCSI_PMCRAID=m
 CONFIG_SCSI_SRP=m
 
 ##
