--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1902,6 +1902,7 @@ CONFIG_SCSI_LPFC=m
 # CONFIG_SCSI_LPFC_DEBUG_FS is not set
 CONFIG_SCSI_PMCRAID=m
 CONFIG_SCSI_SRP=m
+CONFIG_SCSI_BFA_FC=m
 
 ##
 ## file: drivers/scsi/aic7xxx/Kconfig.aic79xx
