topconfig enable modular USB_GL860
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14827 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1028,6 +1028,11 @@ CONFIG_USB_GSPCA_VC032X=m
 CONFIG_USB_GSPCA_ZC3XX=m
 
 ##
+## file: drivers/media/video/gspca/gl860/Kconfig
+##
+CONFIG_USB_GL860=m
+
+##
 ## file: drivers/media/video/gspca/m5602/Kconfig
 ##
 CONFIG_USB_M5602=m
