--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -858,6 +858,9 @@ CONFIG_DVB_TTUSB_DEC=m
 ## file: drivers/media/radio/Kconfig
 ##
 CONFIG_RADIO_ADAPTERS=y
+CONFIG_I2C_SI4713=m
+CONFIG_RADIO_SI4713=m
+CONFIG_I2C_SI470X=y
 CONFIG_RADIO_SI470X=y
 CONFIG_USB_MR800=m
 CONFIG_RADIO_TEA5764=m
