topconfig enable modular DVB_USB_FRIIO
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14830 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -771,6 +771,7 @@ CONFIG_DVB_USB_ANYSEE=m
 CONFIG_DVB_USB_DTV5100=m
 CONFIG_DVB_USB_AF9015=m
 CONFIG_DVB_USB_CE6230=m
+CONFIG_DVB_USB_FRIIO=m
 
 ##
 ## file: drivers/media/dvb/frontends/Kconfig
