--- a/tgt/debian/control
+++ b/tgt/debian/control
@@ -9,7 +9,7 @@ Homepage: http://stgt.berlios.de/
 
 Package: tgt
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libconfig-general-perl
+Depends: ${shlibs:Depends}, ${misc:Depends}, libconfig-general-perl, sg3-utils
 Description: Linux SCSI target user-space tools
  The Linux target framework (tgt) allows a Linux system to provide SCSI
  devices (targets) over networked SCSI transports.
