Add line break before source URI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15323 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/firmware-free/debian/templates/copyright.binary.in
+++ b/firmware-free/debian/templates/copyright.binary.in
@@ -1,3 +1,4 @@
-The firmware and its source code may be downloaded from @uri@.
+The firmware and its source code may be downloaded from
+@uri@.
 
 @license@
