debian/templates/control.image-dbg.in: Add long description.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15637 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.image-dbg.in
+++ b/linux-2.6/debian/templates/control.image-dbg.in
@@ -2,4 +2,5 @@ Package: linux-image-@upstreamversion@@abiname@@localversion@-dbg
 Section: debug
 Priority: extra
 Description: Debugging infos for Linux @upstreamversion@@abiname@@localversion@
- TODO
+ This package provides the binary debug image and pre-built debug loadable                                                     
+ modules for Linux kernel @upstreamversion@ on @longclass@ machines.
