--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1152,7 +1152,7 @@ CONFIG_RT3090=m
 ##
 ## file: drivers/staging/rtl8187se/Kconfig
 ##
-CONFIG_RTL8187SE=m
+CONFIG_R8187SE=m
 
 ##
 ## file: drivers/staging/rtl8192e/Kconfig
