topconfig enable PATA_TOSHIBA
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15696 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -150,6 +150,7 @@ CONFIG_PATA_RDC=m
 # CONFIG_PATA_PDC2027X is not set
 # CONFIG_PATA_SIL680 is not set
 CONFIG_PATA_SIS=m
+CONFIG_PATA_TOSHIBA=m
 # CONFIG_PATA_VIA is not set
 # CONFIG_PATA_WINBOND is not set
 # CONFIG_PATA_WINBOND_VLB is not set
