--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1462,10 +1462,12 @@ CONFIG_NETDEV_10000=y
 CONFIG_CHELSIO_T1=m
 CONFIG_CHELSIO_T1_1G=y
 CONFIG_CHELSIO_T3=m
+CONFIG_CHELSIO_T4=m
 CONFIG_ENIC=m
 CONFIG_IXGBE=m
 CONFIG_IXGBE_DCA=y
 CONFIG_IXGBE_DCB=y
+CONFIG_IXGBEVF=m
 CONFIG_IXGB=m
 CONFIG_S2IO=m
 CONFIG_VXGE=m
