topconfig enable modular QLCNIC
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15699 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1480,6 +1480,7 @@ CONFIG_MLX4_EN=m
 CONFIG_MLX4_DEBUG=y
 CONFIG_TEHUTI=m
 CONFIG_BNX2X=m
+CONFIG_QLCNIC=m
 CONFIG_QLGE=m
 CONFIG_DEFXX=m
 # CONFIG_DEFXX_MMIO is not set
