--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1657,6 +1657,7 @@ CONFIG_USB_HSO=m
 CONFIG_USB_NET_INT51X1=m
 CONFIG_USB_CDC_PHONET=m
 CONFIG_USB_IPHETH=m
+CONFIG_USB_SIERRA_NET=m
 
 ##
 ## file: drivers/net/wan/Kconfig
