--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1046,6 +1046,7 @@ CONFIG_VIDEO_CPIA2=m
 ## file: drivers/media/video/cx18/Kconfig
 ##
 CONFIG_VIDEO_CX18=m
+CONFIG_VIDEO_CX18_ALSA=m
 
 ##
 ## file: drivers/media/video/cx231xx/Kconfig
