--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1120,6 +1120,7 @@ CONFIG_USB_GSPCA_T613=m
 CONFIG_USB_GSPCA_TV8532=m
 CONFIG_USB_GSPCA_VC032X=m
 CONFIG_USB_GSPCA_ZC3XX=m
+CONFIG_USB_GSPCA_BENQ=m
 
 ##
 ## file: drivers/media/video/gspca/gl860/Kconfig
