topconfig enable USB_GSPCA_CPIA1
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15706 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1121,6 +1121,7 @@ CONFIG_USB_GSPCA_TV8532=m
 CONFIG_USB_GSPCA_VC032X=m
 CONFIG_USB_GSPCA_ZC3XX=m
 CONFIG_USB_GSPCA_BENQ=m
+CONFIG_USB_GSPCA_CPIA1=m
 
 ##
 ## file: drivers/media/video/gspca/gl860/Kconfig
