topconfig enable modular RADIO_SAA7706H
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15709 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -947,6 +947,8 @@ CONFIG_RADIO_SI4713=m
 CONFIG_RADIO_SI470X=y
 CONFIG_USB_MR800=m
 CONFIG_RADIO_TEA5764=m
+CONFIG_RADIO_SAA7706H=m
+CONFIG_RADIO_TEF6862=m
 
 ##
 ## file: drivers/media/radio/si470x/Kconfig
