--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4122,6 +4122,7 @@ CONFIG_SND_SPI=y
 ##
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=m
+CONFIG_SND_USB_UA101=m
 CONFIG_SND_USB_USX2Y=m
 CONFIG_SND_USB_CAIAQ=m
 CONFIG_SND_USB_CAIAQ_INPUT=y
