topconfig enable modular CEPH_FS
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15711 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2789,6 +2789,12 @@ CONFIG_CACHEFILES=m
 # CONFIG_CACHEFILES_HISTOGRAM is not set
 
 ##
+## file: fs/ceph/Kconfig
+##
+CONFIG_CEPH_FS=m
+# CONFIG_CEPH_FS_PRETTYDEBUG is not set
+
+##
 ## file: fs/cifs/Kconfig
 ##
 CONFIG_CIFS=m
