x86 disable NO_BOOTMEM
not something we want to greet our users with.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15712 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -19,6 +19,7 @@ CONFIG_KVM_GUEST=y
 CONFIG_PARAVIRT=y
 # CONFIG_PARAVIRT_SPINLOCKS is not set
 # CONFIG_PARAVIRT_DEBUG is not set
+# CONFIG_NO_BOOTMEM is not set 
 # CONFIG_MEMTEST is not set
 CONFIG_HPET_TIMER=y
 CONFIG_SCHED_SMT=y
