New upstream version (2.6.34).
Generate dummy autoconf.h to keep modpost building.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15713 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/debian/rules
+++ b/linux-kbuild-2.6/debian/rules
@@ -11,13 +11,19 @@ VERSION_DEBIAN_BINNMU := $(shell echo "$(VERSION_DEBIAN)" | sed -ne 's,.*\+b\(.*
 include debian/rules.defs
 
 build: debian/control $(STAMPS_DIR)/build-base
-$(STAMPS_DIR)/build-base: $(BUILD_DIR) $(STAMPS_DIR)
+$(STAMPS_DIR)/build-base: $(BUILD_DIR) $(STAMPS_DIR) kbuild/include/generated/autoconf.h
 	dh_testdir
 	$(MAKE) -f debian/rules.gen build
 	touch $@
 
 $(BUILD_DIR) $(STAMPS_DIR):
 	@[ -d $@ ] || mkdir $@
+
+# modpost needs CONFIG_SYMBOL_PREFIX from autoconf.h, but this is undefined
+# for all Debian architectures.
+kbuild/include/generated/autoconf.h:
+	@mkdir -p $(@D)
+	@[ -f $@ ] || touch $@
 
 DIR_ORIG = ../orig/$(SOURCE)-$(VERSION)
 TAR_ORIG_NAME = $(SOURCE)_$(VERSION).orig.tar.gz
@@ -40,7 +46,7 @@ maintainerclean:
 
 clean: debian/control
 	dh_testdir
-	rm -rf $(BUILD_DIR) $(STAMPS_DIR) debian/lib/python/debian_linux/*.pyc
+	rm -rf $(BUILD_DIR) $(STAMPS_DIR) debian/lib/python/debian_linux/*.pyc kbuild/include/generated
 	dh_clean
 
 binary-indep:
