topconfig enable modular KSZ884X_PCI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15720 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1426,6 +1426,7 @@ CONFIG_ENC28J60=m
 CONFIG_ETHOC=m
 CONFIG_DNET=m
 CONFIG_PCNET32=m
+CONFIG_KSZ884X_PCI=m
 # CONFIG_FORCEDETH_NAPI is not set
 CONFIG_R6040=m
 CONFIG_SMSC9420=m
