--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -379,6 +379,7 @@ CONFIG_SENSORS_AD7418=m
 CONFIG_SENSORS_ADCXX=m
 CONFIG_SENSORS_ADM1029=m
 CONFIG_SENSORS_ADM9240=m
+CONFIG_SENSORS_ADT7411=m
 CONFIG_SENSORS_ADT7462=m
 CONFIG_SENSORS_ADT7470=m
 CONFIG_SENSORS_ADT7473=m
