--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -384,6 +384,7 @@ CONFIG_SENSORS_ADT7462=m
 CONFIG_SENSORS_ADT7470=m
 CONFIG_SENSORS_ADT7473=m
 CONFIG_SENSORS_ADT7475=m
+CONFIG_SENSORS_ASC7621=m
 CONFIG_SENSORS_ATXP1=m
 CONFIG_SENSORS_I5K_AMB=m
 CONFIG_SENSORS_F71882FG=m
@@ -1185,6 +1186,11 @@ CONFIG_VIDEO_SAA7164=m
 ## file: drivers/media/video/sn9c102/Kconfig
 ##
 CONFIG_USB_SN9C102=m
+
+##
+## file: drivers/media/video/tlg2300/Kconfig
+##
+CONFIG_VIDEO_TLG2300=m
 
 ##
 ## file: drivers/media/video/usbvideo/Kconfig
