topconfig enable modular DVB_USB_AZ6027
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15723 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -845,6 +845,7 @@ CONFIG_DVB_USB_AF9015=m
 CONFIG_DVB_USB_CE6230=m
 CONFIG_DVB_USB_FRIIO=m
 CONFIG_DVB_USB_EC168=m
+CONFIG_DVB_USB_AZ6027=m
 
 ##
 ## file: drivers/media/dvb/frontends/Kconfig
