topconfig enable modular DVB_NGENE
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15724 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -904,6 +904,11 @@ CONFIG_DVB_MANTIS=m
 CONFIG_DVB_HOPPER=m
 
 ##
+## file: drivers/media/dvb/ngene/Kconfig
+##
+CONFIG_DVB_NGENE=m
+
+##
 ## file: drivers/media/dvb/pluto2/Kconfig
 ##
 CONFIG_DVB_PLUTO2=m
