--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -349,16 +349,24 @@ CONFIG_DRM_VMWGFX=m
 ##
 ## file: drivers/hid/Kconfig
 ##
+CONFIG_HID_3M_PCT=m
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=m
 CONFIG_HIDRAW=y
 CONFIG_DRAGONRISE_FF=y
 CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
+CONFIG_LOGIG940_FF=y
+CONFIG_HID_MAGICMOUSE=m
+CONFIG_HID_MOSART=m
+CONFIG_HID_NTRIG=m
 CONFIG_PANTHERLORD_FF=y
+CONFIG_HID_QUANTA=m
+CONFIG_HID_STANTUM=m
 CONFIG_GREENASIA_FF=y
 CONFIG_SMARTJOYPLUS_FF=y
 CONFIG_THRUSTMASTER_FF=y
+CONFIG_HID_WACOM=m
 CONFIG_ZEROPLUS_FF=y
 
 ##
