--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1351,6 +1351,7 @@ CONFIG_SDIO_UART=m
 ## file: drivers/mmc/host/Kconfig
 ##
 CONFIG_MMC_SDHCI=m
+CONFIG_MMC_RICOH_MMC=y
 CONFIG_MMC_SDHCI_PCI=m
 CONFIG_MMC_RICOH_MMC=m
 CONFIG_MMC_SDHCI_PLTFM=m
