--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1014,6 +1014,7 @@ CONFIG_THINKPAD_ACPI_VIDEO=y
 CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
 # CONFIG_INTEL_MENLOW is not set
 CONFIG_EEEPC_LAPTOP=m
+CONFIG_EEEPC_WMI=m
 CONFIG_MSI_WMI=m
 CONFIG_ACPI_WMI=m
 CONFIG_ACPI_ASUS=m
