topconfig enable LOGFS
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15730 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2996,6 +2996,11 @@ CONFIG_JFS_SECURITY=y
 # CONFIG_JFS_STATISTICS is not set
 
 ##
+## file: fs/logfs/Kconfig
+##
+CONFIG_LOGFS=m
+
+##
 ## file: fs/minix/Kconfig
 ##
 CONFIG_MINIX_FS=m
