--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1289,13 +1289,13 @@ CONFIG_MFD_SM501=m
 CONFIG_HTC_PASIC3=m
 CONFIG_TPS65010=m
 CONFIG_MFD_WM8400=m
-CONFIG_MFD_WM831X=m
-CONFIG_MFD_WM8350_I2C=m
+# CONFIG_MFD_WM831X is not set
+# CONFIG_MFD_WM8350_I2C is not set
 CONFIG_MFD_PCF50633=m
 CONFIG_MFD_MC13783=m
 CONFIG_PCF50633_ADC=m
 CONFIG_PCF50633_GPIO=m
-CONFIG_AB3100_CORE=m
+# CONFIG_AB3100_CORE is not set
 CONFIG_AB3100_OTP=m
 # CONFIG_EZX_PCAP is not set
 
