--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3527,6 +3527,7 @@ CONFIG_BT_RFCOMM_TTY=y
 ## file: net/bridge/Kconfig
 ##
 CONFIG_BRIDGE=m
+CONFIG_BRIDGE_IGMP_SNOOPING=y
 
 ##
 ## file: net/bridge/netfilter/Kconfig
