--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1740,6 +1740,7 @@ CONFIG_MWL8K=m
 ## file: drivers/net/wireless/ath/Kconfig
 ##
 CONFIG_ATH_COMMON=m
+# CONFIG_ATH_DEBUG is not set
 
 ##
 ## file: drivers/net/wireless/ath/ar9170/Kconfig
