--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1758,6 +1758,7 @@ CONFIG_ATH5K=m
 ##
 CONFIG_ATH9K=m
 # CONFIG_ATH9K_DEBUG is not set
+# CONFIG_ATH9K_DEBUGFS is not set
 
 ##
 ## file: drivers/net/wireless/b43/Kconfig
