--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -402,6 +402,11 @@ CONFIG_DRM_NOUVEAU_BACKLIGHT=y
 CONFIG_DRM_I2C_CH7006=m
 
 ##
+## file: drivers/gpu/vga/Kconfig
+##
+CONFIG_VGA_SWITCHEROO=y
+
+##
 ## file: drivers/hid/usbhid/Kconfig
 ##
 CONFIG_USB_HID=m
