--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1178,6 +1178,7 @@ CONFIG_RTL8192SU=m
 CONFIG_USB_IP_COMMON=m
 CONFIG_USB_IP_VHCI_HCD=m
 CONFIG_USB_IP_HOST=m
+# CONFIG_USB_IP_DEBUG_ENABLE is not set
 
 ##
 ## file: drivers/staging/wlan-ng/Kconfig
