--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2246,6 +2246,11 @@ CONFIG_STAGING=y
 # CONFIG_ASUS_OLED is not set
 
 ##
+## file: drivers/staging/batman-adv/Kconfig
+##
+# CONFIG_BATMAN_ADV is not set
+ 
+##
 ## file: drivers/staging/b3dfg/Kconfig
 ##
 # CONFIG_B3DFG is not set
@@ -2254,6 +2259,11 @@ CONFIG_STAGING=y
 ## file: drivers/staging/comedi/Kconfig
 ##
 # CONFIG_COMEDI is not set
+
+##
+## file: drivers/staging/crystalhd/Kconfig
+##
+# CONFIG_CRYSTALHD is not set
 
 ##
 ## file: drivers/staging/cx25821/Kconfig
@@ -2269,6 +2279,11 @@ CONFIG_STAGING=y
 ## file: drivers/staging/dst/Kconfig
 ##
 # CONFIG_DST is not set
+
+##
+## file: drivers/staging/dt3155/Kconfig
+##
+# CONFIG_DT3155 is not set
 
 ##
 ## file: drivers/staging/echo/Kconfig
@@ -2366,6 +2381,11 @@ CONFIG_STAGING=y
 # CONFIG_RTL8192E is not set
 
 ##
+## file: drivers/staging/samsung-laptop/Kconfig
+##
+# CONFIG_SAMSUNG_LAPTOP is not set
+
+##
 ## file: drivers/staging/serqt_usb2/Kconfig
 ##
 # CONFIG_USB_SERIAL_QUATECH2 is not set
@@ -2374,6 +2394,11 @@ CONFIG_STAGING=y
 ## file: drivers/staging/slicoss/Kconfig
 ##
 # CONFIG_SLICOSS is not set
+
+##
+## file: drivers/staging/sm7xx/Kconfig
+##
+# CONFIG_FB_SM7XX is not set
 
 ##
 ## file: drivers/staging/speakup/Kconfig
