--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1301,6 +1301,7 @@ CONFIG_PCF50633_GPIO=m
 # CONFIG_AB3100_CORE is not set
 CONFIG_AB3100_OTP=m
 # CONFIG_EZX_PCAP is not set
+CONFIG_LPC_SCH=m
 
 ##
 ## file: drivers/misc/Kconfig
